add a css style and put code of javascript on the test.html

--- a/JavaScriptSamples/JSTricks/test.html
+++ b/JavaScriptSamples/JSTricks/test.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <title>test for js tricks</title>
     <script src="tricks.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 <script>main()</script>
+<main>
+    <header>
+        <h1>HTML test for js tricks</h1>
+    </header>
+<article class="article">
+    <header>
+        <h2>content of tricks.js</h2>
+    </header>
+    <spe>
+        <code>
+            <iframe src="tricks.js" width="500px" height="400px" type="text/javascript"></iframe>
+        </code>
+    </spe>
+
+    <menu type="context" id="mymenu">
+        <menuitem label="Refresh"></menuitem>
+        <menuitem label="Twitter"></menuitem>
+    </menu>
+    <footer></footer>
+</article>
+</main>
+
 </body>
 </html>
